2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* .htaccess: Set DirectoryIndex to index.html.
	* index.html: Added static page.

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* templates/language-release-doc-stats-modules.tmpl: 
	* templates/language-release-ui-stats-modules.tmpl: 
	Display messages as well.

	* releases.py (Releases.get_stats_for_module): Return info
	messages as well.
	(Releases.list_modules): Use PO and POT info messages as well.

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* translation-teams.xml.in: Added "since" field for Serbian
	coordinator (myself ;).

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* templates/language-release-ui-stats.tmpl: check if
	$category.statistics.ui_size!=0, to show only categories with
	really translatable stuff.

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* data/main.css: Clean-ups.
	* utils.py (not_found_404): Added.
	* teams.py (TranslationTeams): introduce only_language parameter.

	* releases.py (Releases.list_modules): More stats.

	* templates/language-release-doc-stats.tmpl: 
	* templates/language-release-doc-stats-modules.tmpl: 
	* templates/language-release-ui-stats.tmpl: 
	* templates/language-release-ui-stats-modules.tmpl: 
	Added.
	
	* templates/language-release.tmpl: Include above templates.

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: Edit gtk+ entry.

	* releases.py (Releases.list_modules): 
	Add stats for each module/category if needed.

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* releases.py (Releases.list_modules): 
	Don't gather stats if module is not available.

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* releases.py:
	* teams.py: 
	* templates/team.tmpl: 

	Display all languages for a team.

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* templates/team.tmpl: Added.
	* teams.py: Support single team display.
	(TranslationTeams.__init__): Add description field.

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* teams.py: Set up /teams/ actions.