@@ -1,5 +1,10 @@
 2006-03-09  Danilo Šegan  <danilo@gnome.org>
 
+	* teams.py: List languages when desired.
+	* templates/list-languages.tmpl: Added.
+
+2006-03-09  Danilo Šegan  <danilo@gnome.org>
+
 	* .htaccess: Set DirectoryIndex to index.html.
 	* index.html: Added static page.
 
